# tungsten

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_demo.py
.github/workflows/: build.yaml  lint.yaml
assets/: LICENSE  README.md
tests/: sigma_aldrich.py  test_sigma_aldrich.py
tungsten/: __init__.py  __main__.py  fields.py  parse.py
tungsten/globally_harmonized_system/: safety_data_sheet.py  safety_data_sheet_rules.py
tungsten/parsers/: field_parse.py  globally_harmonized_system.py  parsing_hierarchy.py  sds_parser.py  sigma_aldrich.py
tungsten/parsers/globally_harmonized_system/: safety_data_sheet.py  safety_data_sheet_rules.py
tungsten/parsers/supplier/sigma_aldrich/: field_parse.py  pictogram_injector.py  safety_data_sheet_rules.py  sds_parser.py  sigma_aldrich_sds_parser.py  table_injector.py
tungsten/pictograms/: README.md  pictograms.py
