[tool.poetry]
name = "tungsten"
version = "0.1.0"
description = "An MSDS parser."
authors = ["Dennis Pham <dennis@dennispham.me>", "Brian Lu <me@greencappuccino.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
"pdfminer.six" = "^20220524"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
taskipy = "^1.10.3"
pre-commit = "^2.20.0"

[tool.taskipy.tasks]
lint = "flake8 ."
pre-commit = "pre-commit install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
